deploy/demo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fdk-harvest-admin
spec:
  ingressClassName: nginx
  rules:
    - host: admin-api.demo.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: fdk-harvest-admin
                port:
                  number: 8080
            path: /
            pathType: Prefix
